# LP-0016-Anonymous-forum-with-moderation

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
.github/workflows/: ci.yml
app/: .gitignore  README.md  next.config.mjs  package.json
app/src/app/: layout.tsx  page.tsx
app/src/components/: SdkProvider.tsx
app/src/lib/: forum.ts
circuits/: .gitignore  membership.circom  package-lock.json  package.json  preflight_compare.mjs  preflight_nodehash.circom  preflight_prep.mjs  validate.mjs  vkey.json
crates/lez-runner/: Cargo.toml
crates/lez-runner/src/: lib.rs
crates/lez-runner/tests/: staking_lifecycle.rs
crates/moderation-cert/: Cargo.toml
crates/moderation-cert/src/: lib.rs
crates/proof-daemon/: Cargo.toml  smoke.sh
crates/proof-daemon/src/: chain.rs  crypto.rs  dto.rs  error.rs  lib.rs  main.rs  proving.rs  state.rs
crates/proof-host/: Cargo.toml
crates/proof-host/src/: lib.rs
crates/slash-evidence/: Cargo.toml
crates/slash-evidence/src/: lib.rs
docs/: PLAN.md  SPEC.md  STATUS.md  cu-costs.md  demo-video-script.md  deployments.md  protocol.md
docs/adr/: ADR-001-waku-only-storage.md  ADR-002-risc0-feasibility.md  ADR-003-naive-ed25519-threshold.md  ADR-004-prover-location-and-stateless-daemon.md  ADR-007-nssa-dep.md  ADR-008-slash-share-binding.md  ADR-009-waku-transport.md  ADR-010-membership-proof-groth16.md  ADR-011-staking-via-chained-call-escrow.md  ADR-012-port-to-spel-framework.md  README.md
docs/dev/: local-sequencer.md
docs/tasks/: P0-P1.md  P2.md
programs/membership_registry/core/: Cargo.toml
programs/membership_registry/core/src/: lib.rs  shamir.rs  slash.rs
programs/membership_registry/methods/guest/: Cargo.toml
programs/post_proof/core/: Cargo.toml
programs/post_proof/core/src/: lib.rs  shamir.rs
programs/post_proof/methods/guest/: Cargo.toml
programs/registry-spel/: .gitignore  Cargo.toml  Makefile  README.md  registry-spel-idl.json  spel.toml
programs/registry-spel/examples/: Cargo.toml
programs/registry-spel/membership_registry_core/src/: lib.rs  shamir.rs
programs/registry-spel/methods/: Cargo.toml
programs/registry-spel/methods/guest/: Cargo.toml
programs/registry-spel/registry_spel_core/: Cargo.toml
programs/registry-spel/registry_spel_ffi/: Cargo.toml
programs/registry-spel/registry_spel_ffi/src/: lib.rs
programs/registry-spel/scripts/: install_lgx.py  patch_lgx_manifest.py
scripts/: bounty-tests.sh  demo.mjs
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  index.ts  transport.ts  tree.ts  types.ts
sdk/tests/: client.test.ts  integration.mjs  lifecycle.mjs  transport.test.ts  tree.test.ts  waku-integration.mjs
