[workspace]
resolver = "2"
members = [
    "programs/membership_registry/core",
    "programs/post_proof/core",
    "crates/proof-host",
    "crates/slash-evidence",
    "crates/moderation-cert",
]
# RISC0 guest crates (`programs/*/methods/guest`) are NOT workspace members.
# They're built with `cargo risczero build` from their own manifests because
# they target the riscv32im-risc0-zkvm-elf triple.
#
# crates/lez-runner AND crates/proof-daemon are excluded: they path-dep the
# sibling LEZ workspace checkout (only present on the build host) and pull in
# the heavy LEZ build. They build on Hetzner, not the Mac (ADR-004).
exclude = [
    "programs/membership_registry/methods/guest",
    "programs/post_proof/methods/guest",
    "crates/lez-runner",
    "crates/proof-daemon",
    # SPEL port (ADR-012): a self-contained spel-framework workspace built with
    # `cargo risczero build` / the `spel` CLI on the build host. It vendors a
    # copy of membership_registry_core (same package name) because the risc0
    # docker build context can't reach the outer crate.
    "programs/registry-spel",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Davit Maisuradze <denton.gaibo@gmail.com>"]
repository = "https://github.com/davitmaisuradze/forum-protocol"
rust-version = "1.94"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Pinned to match the LEZ workspace at ../lez (rust-toolchain 1.94, risc0 3.0.5).
risc0-zkvm = { version = "3.0.5", default-features = false }
risc0-build = "3.0.5"

[profile.release]
lto = true
codegen-units = 1
