[package]
name = "proof-daemon"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Localhost HTTP daemon the TypeScript SDK calls to generate RISC0 proofs (see ADR-004)"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
