[package]
name = "proof-host"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Host-side proof generation + verification for the post-proof guest"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
risc0-zkvm = { version = "3.0.5", features = ["std"] }

[[bin]]
name = "bench_any_elf"
path = "src/bin/bench_any_elf.rs"
