[package]
name = "proof-host"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Host-side proof generation + verification for the post-proof guest"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
bincode = "1"
post_proof_core = { path = "../../programs/post_proof/core" }

[[bin]]
name = "bench_any_elf"
path = "src/bin/bench_any_elf.rs"

[[bin]]
name = "bench_post_proof"
path = "src/bin/bench_post_proof.rs"
