[package]
name = "proof-host"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Host-side proof generation + verification for the post-proof guest"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
bincode = "1"
post_proof_core = { path = "../../programs/post_proof/core" }

[features]
# Opt-in GPU proving. `metal` (Apple Silicon) is the <10s perf path (ADR-002);
# `cuda` for NVIDIA. Off by default so the Linux/Hetzner build is unaffected.
#   cargo run --release --features metal --bin bench_post_proof -- <elf>
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]

[[bin]]
name = "bench_any_elf"
path = "src/bin/bench_any_elf.rs"

[[bin]]
name = "bench_post_proof"
path = "src/bin/bench_post_proof.rs"
