[package]
name = "slash-evidence"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Aggregates moderation certificates and reconstructs the nullifier secret for slash submission"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
post_proof_core = { path = "../../programs/post_proof/core" }
moderation-cert = { path = "../moderation-cert" }
membership_registry_core = { path = "../../programs/membership_registry/core" }

[dev-dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
