[package]
name = "membership_registry_core"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Davit Maisuradze <denton.gaibo@gmail.com>"]
rust-version = "1.88"
# Lower than the workspace's 1.94 because this crate also compiles inside
# the risc0-guest-builder docker image which ships rustc 1.88-dev.
description = "Shared types for the membership_registry LEZ program (Instruction enum, state)"
# `edition`, `license`, etc. inlined (not workspace-inherited) because this
# crate is also pulled into the docker build context for the RISC0 guest,
# which does not include the parent workspace's Cargo.toml.

[features]
default = ["std"]
std = []

[dependencies]
# Inlined (not workspace.dependencies) for the same reason as the package
# metadata above: the guest's docker build context starts at this crate's
# parent (membership_registry/) and does not include the outer Cargo.toml.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5", default-features = false }
sha2 = { version = "0.10", default-features = false }
bincode = { version = "1", default-features = false }
# Slash verification (ADR-008): Shamir poly_eval + Ed25519 sig checks.
# The shamir module is vendored (src/shamir.rs) rather than depending on
# post_proof_core, because the guest's docker build context is scoped to
# programs/membership_registry/ and can't reach ../../post_proof/core. A
# cross-check test in slash-evidence asserts the two copies agree.
ark-bn254 = { version = "0.5", default-features = false, features = ["scalar_field"] }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ed25519-dalek = { version = "2", default-features = false }

[dev-dependencies]
serde_json = "1"
