[package]
name = "registry_spel-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "registry_spel_cli"
path = "src/bin/registry_spel_cli.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", branch = "main" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
spel = { git = "https://github.com/logos-co/spel.git", branch = "main" }
registry_spel_core = { path = "../registry_spel_core" }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
