[package]
name = "registry_spel_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nssa        = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
nssa_core   = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
common      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3", features = ["client"] }
wallet      = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
spel-framework-core = { git = "https://github.com/logos-co/spel.git", tag = "v0.4.0" }
serde_json  = "1"
serde       = { version = "1", features = ["derive"] }
borsh       = "1.5"
tokio       = { version = "1", features = ["rt-multi-thread"] }
hex         = "0.4"
sha2        = "0.10"
registry_spel_core = { path = "../registry_spel_core" }
