[package]
name = "membership_registry_guest"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "LEZ program: forum-instance membership registry with stake + slash"

[[bin]]
name = "membership_registry"
path = "src/bin/membership_registry.rs"

[workspace]
# Guest crates live outside the parent workspace because they target
# riscv32im-risc0-zkvm-elf via cargo risczero.

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1", default-features = false }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone", rev = "8c8f5b57" }
membership_registry_core = { path = "../../core", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
