[package]
name = "registry_spel-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "registry_spel"
path = "src/bin/registry_spel.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", branch = "main" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
membership_registry_core = { path = "../../membership_registry_core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
bincode = "1"
ruint = "=1.17.0"

# Size-optimized profile: the testnet caps a program-deployment tx at ~512 KB
# and the slash-verification crypto (ark-bn254 + ed25519) makes the guest ELF
# large. Optimize for size. Thin LTO (not fat) — fat LTO wedged on the build
# host's memory/disk; thin is parallel + light and still shrinks the ELF.
[profile.release]
opt-level = "z"
lto = "thin"
strip = true
panic = "abort"

